--- a/common.css
+++ b/common.css
@@ -35,28 +35,30 @@ input[type="url"],
 textarea {
 	box-sizing: border-box;
 	resize: none;  /* Because we have JavaScript auto-sizing. */
+	margin: 0;
 	min-width: 1em;
 	min-height: 1em;
 	line-height: 1.5;
 	padding: 0 4px;
 	background: white;
 	overflow: hidden;
-	border-color: var(--border-color);
+	border: 1px solid var(--border-color);
 	background: var(--input-color);
 	color: var(--fg-color);
 }
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="text"],
-input[type="url"],
-textarea,
-fieldset {
-	border: 1px solid var(--border-color);
-	margin: 0;
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="text"]:focus,
+input[type="url"]:focus,
+textarea:focus {
+	/* So that the focus outline renders correctly. */
+	z-index: 1;
 }
 fieldset {
+	border: 1px solid var(--border-color);
 	border-radius: 4px;
+	margin: 0;
 }
 
 input::placeholder,
