Added support for Firefox Android
It took several hours, but it wasn't difficult. Unfortunately a few
features are missing due to limitations on the current Firefox for
Android implementation of browser extensions. But the extension is
functional, usable and useful.

--- a/common.css
+++ b/common.css
@@ -19,6 +19,13 @@ form {
 	padding: 0;
 }
 
+.mobile .desktop-only {
+	display: none;
+}
+.desktop .mobile-only {
+	display: none;
+}
+
 :any-link {
 	color: var(--link-color);
 }
